# boardgame_rag

./: .gitignore  Makefile  README.md  pyproject.toml
eval/: report.md
sandbox/: explore.ipynb  explore.py  explore_data_gen.ipynb  explore_eval_harness.ipynb  explore_index_build.ipynb  explore_retriever.py  test_data_gen.ipynb  test_eval_harness.ipynb  test_index_build.ipynb  test_index_build.py  test_retriever.py
src/boardgame_rag/: __init__.py  api.py  data_gen.py  eval_harness.py  index_build.py  retriever.py  utils.py
