[project]
name = "boardgame-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "faiss-cpu>=1.8",
    "fastapi[standard]>=0.115",
    "fastparquet>=2024.11.0",
    "httpx>=0.27",
    "huggingface-hub>=0.24",
    "jupyter>=1.1.1",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=21.0.0",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "rank-bm25>=0.2",
    "scikit-learn>=1.5",
    "sentence-transformers==2.7.*",
    "torch>=2.3",
    "tqdm>=4.66",
    "transformers>=4.44",
    "typer>=0.12",
    "uvicorn>=0.30",
]

[project.scripts]
boardgame-rag = "boardgame_rag:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=24.8",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.mypy]
python_version = "3.11"

# Per-module ignores go in overrides (array of tables).
[[tool.mypy.overrides]]
module = ["faiss", "faiss.*", "rank_bm25", "rank_bm25.*", "sentence_transformers", "sentence_transformers.*"]
ignore_missing_imports = true

# If you don't want to install pandas-stubs yet, ignore pandas too:
[[tool.mypy.overrides]]
module = ["pandas", "pandas.*"]
ignore_missing_imports = true



